--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "popper.js": "^1.16.1"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "webpack-dev-server": "^3.10.1"
   }
 }
